crates/keron-lang/tests/corpus/errors/check/fn_body_reconcile_gate_still_rejected.keron
# Fn bodies are value context — a reconcile inside one runs against a
# throwaway sink, so it is rejected even inside an effect-statement
# gate.
fn install(): Void {
  if true {
    reconcile brew("git")
  }
}
